fix color contrast with more prismjs css classes

--- a/styles/prism-accessibility-overrides.css
+++ b/styles/prism-accessibility-overrides.css
@@ -9,3 +9,7 @@
 .token.punctuation{
   color:hsl(0,0%,43%);
 }
+
+.token.function, .token.class-name{
+  color:hsl(348,50%,50%);
+}
